unifi/ingress-route.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: unifi-ingress-route
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`unifi.celestium.life`)
      kind: Rule
      services:
      - name: unifi-controller
        port: 8443
        scheme: https
        serversTransport: unifi-ingress-transport
